--- a/Service/.classpath
+++ b/Service/.classpath
@@ -9,36 +9,39 @@
 	<classpathentry kind="lib" path="lib_managed/httpclient-4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib_managed/httpcore-4.2.2.jar"/>
 	<classpathentry kind="lib" path="lib_managed/httpmime-4.2.1.jar"/>
-	<classpathentry kind="lib" path="lib_managed/jackson-annotations-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib_managed/jackson-core-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib_managed/jackson-databind-2.1.1.jar"/>
 	<classpathentry kind="lib" path="lib_managed/joda-convert-1.2.jar"/>
 	<classpathentry kind="lib" path="lib_managed/joda-time-2.1.jar"/>
 	<classpathentry kind="lib" path="lib_managed/js-1.7R4.jar"/>
 	<classpathentry kind="lib" path="lib_managed/junit-4.10.jar"/>
-	<classpathentry kind="lib" path="lib_managed/logback-classic-1.0.13.jar"/>
-	<classpathentry kind="lib" path="lib_managed/logback-core-1.0.13.jar"/>
 	<classpathentry kind="lib" path="lib_managed/paranamer-2.1.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-	<classpathentry kind="lib" path="lib_managed/mchange-commons-java-0.2.3.4.jar"/>
 	<classpathentry kind="lib" path="lib_managed/aws-java-sdk-1.7.3.jar"/>
-	<classpathentry kind="lib" path="lib_managed/c3p0-0.9.2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib_managed/ojdbc6_11.2.0.4.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-arch-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-arch-framework-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-aws-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-jdom-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-json-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/akka-actor_2.10-2.3.3.jar"/>
-	<classpathentry kind="lib" path="lib_managed/akka-slf4j_2.10-2.3.3.jar"/>
-	<classpathentry kind="lib" path="lib_managed/typesafe-config.jar"/>
 	<classpathentry kind="lib" path="lib_managed/cglib-nodep-2.2.3.jar"/>
-	<classpathentry kind="lib" path="lib_managed/elx-webapps-3.6.0.jar"/>
-	<classpathentry kind="lib" path="lib_managed/scala-compiler-2.10.4.jar"/>
-	<classpathentry kind="lib" path="lib_managed/scalap-2.10.4.jar"/>
 	<classpathentry kind="lib" path="lib_managed/servlet-api-3.0.jar"/>
 	<classpathentry kind="lib" path="lib_managed/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="lib_managed/squeryl_2.10-0.9.5-6.jar"/>
+	<classpathentry kind="lib" path="lib_managed/akka-actor_2.11-2.3.9.jar"/>
+	<classpathentry kind="lib" path="lib_managed/akka-slf4j_2.11-2.3.9.jar"/>
+	<classpathentry kind="lib" path="lib_managed/akka-remote_2.11-2.3.9.jar"/>
+	<classpathentry kind="lib" path="lib_managed/akka-cluster_2.11-2.3.9.jar"/>
+	<classpathentry kind="lib" path="lib_managed/c3p0-0.9.5.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-arch-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-arch-framework-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-aws-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-jdom-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-json-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-webapps-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/logback-classic-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib_managed/logback-core-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib_managed/mchange-commons-java-0.2.9.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala-compiler-2.11.6.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala-library-2.11.6.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-webide-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/elx-webservices-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala-parser-combinators_2.11-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scalap-2.11.6.jar"/>
+	<classpathentry kind="lib" path="lib_managed/squeryl_2.11-0.9.5-7.jar"/>
+	<classpathentry kind="lib" path="lib_managed/typesafe-config-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala-xml-2.11.0-M4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
